i18n: error translation for fil-PH

--- a/packages/hoppscotch-common/locales/fil-PH.json
+++ b/packages/hoppscotch-common/locales/fil-PH.json
@@ -461,50 +461,50 @@
       "heading": "Error sa Extension",
       "description": "Nag-fail ang pagpapatakbo ng request sa extension"
     },
-    "authproviders_load_error": "Unable to load auth providers",
-    "browser_support_sse": "This browser doesn't seems to have Server Sent Events support.",
-    "check_console_details": "Check console log for details.",
-    "check_how_to_add_origin": "Check how you can add an origin",
-    "curl_invalid_format": "cURL is not formatted properly",
+    "authproviders_load_error": "Hindi ma-load ang mga authentication provider",
+    "browser_support_sse": "Ang browser na ito ay maaring walang suporta sa mga Server Sent Events.",
+    "check_console_details": "I-check ang log sa console para sa mga detalye.",
+    "check_how_to_add_origin": "I-check kung paano ka magdadagdag ng origin",
+    "curl_invalid_format": "Hindi na-format ang cURL ng tama",
     "danger_zone": "Danger zone",
-    "delete_account": "Your account is currently the sole owner in these workspaces:",
+    "delete_account": "Ang iyong account ay kasalukuyang nag-iisang nag-mamayari ng mga workspace na ito:",
     "delete_account_description": "You must either remove yourself, transfer ownership, or delete these workspaces before you can delete your account.",
-    "delete_activity_log": "Failed to delete activity log",
-    "delete_all_activity_logs": "Failed to delete all activity logs",
-    "empty_email_address": "Email Address cannot be empty",
-    "empty_profile_name": "Profile name cannot be empty",
-    "empty_req_name": "Empty Request Name",
+    "delete_activity_log": "Nag-fail ang pagbura sa activity log",
+    "delete_all_activity_logs": "Nag-fail ang pagbura sa lahat ng mga activity log",
+    "empty_email_address": "Hindi maaring walang laman ang Email Address",
+    "empty_profile_name": "Hindi maaring walang pangalan  ang profile",
+    "empty_req_name": "Walang Laman ang Pangalan ng Request",
     "fetch_activity_logs": "Failed to fetch activity logs",
-    "f12_details": "(F12 for details)",
-    "gql_prettify_invalid_query": "Couldn't prettify an invalid query, solve query syntax errors and try again",
-    "incomplete_config_urls": "Incomplete configuration URLs",
-    "incorrect_email": "Incorrect email",
-    "invalid_file_type": "Invalid file type for `{filename}`.",
-    "invalid_link": "Invalid link",
-    "invalid_link_description": "The link you clicked is invalid or expired.",
-    "invalid_embed_link": "The embed does not exist or is invalid.",
-    "json_parsing_failed": "Invalid JSON",
-    "json_prettify_invalid_body": "Couldn't prettify an invalid body, solve json syntax errors and try again",
-    "network_error": "There seems to be a network error. Please try again.",
-    "network_fail": "Could not send request",
-    "no_collections_to_export": "No collections to export. Please create a collection to get started.",
-    "no_duration": "No duration",
-    "no_environments_to_export": "No environments to export. Please create an environment to get started.",
-    "no_results_found": "No matches found",
-    "page_not_found": "This page could not be found",
-    "please_install_extension": "Please install the extension and add origin to the extension.",
-    "proxy_error": "Proxy error",
-    "same_email_address": "Updated email address is same as the current email address",
-    "same_profile_name": "Updated profile name is same as the current profile name",
-    "script_fail": "Could not execute pre-request script",
-    "something_went_wrong": "Something went wrong",
-    "subscription_error": "Failed to subscribe to the topic: {error}",
-    "test_script_fail": "Could not execute post-request script",
-    "reading_files": "Error while reading one or more files.",
-    "fetching_access_tokens_list": "Something went wrong while fetching the list of tokens",
-    "generate_access_token": "Something went wrong while generating the access token",
-    "delete_access_token": "Something went wrong while deleting the access token",
-    "extension_not_found": "Extension not found"
+    "f12_details": "(Pindutin ang F12 para sa mga detalye)",
+    "gql_prettify_invalid_query": "Hindi ma-prettify ang hindi wastong query, ayusin ang mga query syntax error at subukang muli",
+    "incomplete_config_urls": "Hindi kompletong mga configuration URL",
+    "incorrect_email": "Hindi wastong email",
+    "invalid_file_type": "Hindi wastong filetype para sa `{filename}`.",
+    "invalid_link": "Hindi wastong link",
+    "invalid_link_description": "Ang link na iyong na-click ay hindi wasto o nag-expire.",
+    "invalid_embed_link": "Ang embed ay hindi nag-eexist o hindi wasto.",
+    "json_parsing_failed": "Hindi wastong JSON",
+    "json_prettify_invalid_body": "Hindi ma-prettify ang hindni wastong body, ayusin ang mga JSON syntax error at subukang muli",
+    "network_error": "Mukhang mayroong problema sa network. Mangyaring subukang muli.",
+    "network_fail": "Hindi makapagpadala ng request",
+    "no_collections_to_export": "Walang koleksyon na ma-eexport. Mangyaring gumawa ng koleksyon upang simulan.",
+    "no_duration": "Walang duration",
+    "no_environments_to_export": "Walang environment na ma-eexport. Mangyaring gumawa ng environment upang simulan.",
+    "no_results_found": "Walang katugma",
+    "page_not_found": "Ang page na ito ay hindi mahanap",
+    "please_install_extension": "Mangyaring mag-install ng extension at magdagdag ng origin sa extension.",
+    "proxy_error": "Error sa proxy",
+    "same_email_address": "Ang bagong email address ay pareho ng kasalukuyang email address",
+    "same_profile_name": "Ang bagong pangalan ng profile ay pareho ng kasalukuyang pangalan ng profile",
+    "script_fail": "Hindi ma-execute ang pre-request script",
+    "something_went_wrong": "Nagkaproblema",
+    "subscription_error": "Nag-fail mag-subscribe sa topic: {error}",
+    "test_script_fail": "Hindi ma-execute ang post-request script",
+    "reading_files": "Error habang nagbabasa ng isa o higit pang mga file.",
+    "fetching_access_tokens_list": "Nagkaproblema habang kinukuha ang listahan ng mga token",
+    "generate_access_token": "Nagkaproblema habang nag-gegenerate ng access token",
+    "delete_access_token": "Nagkaproblema habang binubura ang access token",
+    "extension_not_found": "Hindi makita ang extension"
   },
   "export": {
     "as_json": "Export as JSON",
