chore: rename test to post-request

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -599,7 +599,7 @@
     "network_fail": "Unable to reach the API endpoint. Check your network connection or select a different Interceptor and try again.",
     "offline": "You're using Hoppscotch offline. Updates will sync when you're online, based on workspace settings.",
     "offline_short": "You're using Hoppscotch offline.",
-    "post_request_tests": "Test scripts are written in JavaScript, and are run after the response is received.",
+    "post_request_tests": "Post-request scripts are written in JavaScript, and are run after the response is received.",
     "pre_request_script": "Pre-request scripts are written in JavaScript, and are run before the request is sent.",
     "script_fail": "It seems there is a glitch in the pre-request script. Check the error below and fix the script accordingly.",
     "test_script_fail": "There seems to be an error with test script. Please fix the errors and run tests again",
@@ -1396,6 +1396,7 @@
     "history": "History",
     "mqtt": "MQTT",
     "parameters": "Parameters",
+    "post_request_script": "Post-request Script",
     "pre_request_script": "Pre-request Script",
     "queries": "Queries",
     "query": "Query",
@@ -1406,7 +1407,6 @@
     "share_tab_request": "Share tab request",
     "socketio": "Socket.IO",
     "sse": "SSE",
-    "tests": "Tests",
     "types": "Types",
     "variables": "Variables",
     "websocket": "WebSocket",
