--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -522,7 +522,7 @@
     "script_fail": "Could not execute pre-request script",
     "something_went_wrong": "Something went wrong",
     "subscription_error": "Failed to subscribe to the topic: {error}",
-    "test_script_fail": "Could not execute post-request script",
+    "post_request_script_fail": "Could not execute post-request script",
     "reading_files": "Error while reading one or more files.",
     "fetching_access_tokens_list": "Something went wrong while fetching the list of tokens",
     "generate_access_token": "Something went wrong while generating the access token",
@@ -602,8 +602,8 @@
     "post_request_tests": "Post-request scripts are written in JavaScript, and are run after the response is received.",
     "pre_request_script": "Pre-request scripts are written in JavaScript, and are run before the request is sent.",
     "script_fail": "It seems there is a glitch in the pre-request script. Check the error below and fix the script accordingly.",
-    "test_script_fail": "There seems to be an error with test script. Please fix the errors and run tests again",
-    "tests": "Write a test script to automate debugging."
+    "post_request_script_fail": "There seems to be an error with post-request script. Please fix the errors and run tests again",
+    "post_request_script": "Write a post-request script to automate debugging."
   },
   "hide": {
     "collection": "Collapse Collection Panel",
@@ -1589,8 +1589,8 @@
     "feedback_cta_request_name": "Did you like the generated name?",
     "modify_request_body_error": "Failed to modify request body",
     "generate_or_modify_prerequest_input_placeholder": "Enter a prompt to generate or modify the pre-request script",
-    "generate_or_modify_test_script_input_placeholder": "Enter a prompt to generate or modify the test script",
-    "modify_test_script_error": "Failed to modify test script",
+    "generate_or_modify_post_request_script_input_placeholder": "Enter a prompt to generate or modify the post-request script",
+    "modify_post_request_script_error": "Failed to modify post-request script",
     "modify_prerequest_error": "Failed to modify pre-request script"
   },
   "configs": {
