chore: remove spotlight animation

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -150,7 +150,7 @@
     "options": "Options",
     "proxy_privacy_policy": "Proxy privacy policy",
     "reload": "Reload",
-    "search": "Search",
+    "search": "Search and commands",
     "share": "Share",
     "shortcuts": "Shortcuts",
     "social_description": "Follow us on social media to stay updated with the latest news, updates and releases.",
