chore: update translation

--- a/packages/hoppscotch-common/locales/af.json
+++ b/packages/hoppscotch-common/locales/af.json
@@ -416,7 +416,7 @@
     "post_request_tests": "Toetsskrifte word in JavaScript geskryf en word uitgevoer nadat die antwoord ontvang is.",
     "pre_request_script": "Skripte voor die versoek word in JavaScript geskryf en word uitgevoer voordat die versoek gestuur word.",
     "script_fail": "Dit blyk dat daar 'n fout in die voorversoekskrif is. Kontroleer die fout hieronder en maak die skrif dienooreenkomstig reg.",
-    "post_request_script_fail": "There seems to be an error with test script. Please fix the errors and run tests again",
+    "post_request_script_fail": "There seems to be an error with post-request script. Please fix the errors and run tests again",
     "post_request_script": "Skryf 'n toetsskrif om ontfouting te outomatiseer."
   },
   "hide": {
