--- a/packages/hoppscotch-common/locales/de.json
+++ b/packages/hoppscotch-common/locales/de.json
@@ -469,7 +469,7 @@
     "post_request_tests": "Testskripts werden in JavaScript geschrieben und nach Erhalt der Antwort ausgeführt.",
     "pre_request_script": "Pre-Request-Skripte sind in JavaScript geschrieben und werden ausgeführt, bevor die Anfrage gesendet wird.",
     "script_fail": "Es scheint ein Fehler im Pre-Request-Skript zu sein. Überprüfe den Fehler unten und korrigiere das Skript entsprechend.",
-    "post_request_script_fail": "Es scheint ein Fehler im Testskript zu sein. Überprüfe den Fehler unten und korrigiere das Skript entsprechend.",
+    "post_request_script_fail": "Es scheint ein Fehler im Post-Request-Skript zu sein. Überprüfe den Fehler unten und korrigiere das Skript entsprechend.",
     "post_request_script": "Schreibe ein Testskript, um das Debuggen zu automatisieren."
   },
   "hide": {
