--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -662,7 +662,7 @@
     "import_summary_requests_title": "Requests",
     "import_summary_responses_title": "Responses",
     "import_summary_pre_request_scripts_title": "Pre-request scripts",
-    "import_summary_test_scripts_title": "Test scripts",
+    "import_summary_post_request_scripts_title": "Post request scripts",
     "import_summary_not_supported_by_hoppscotch_import": "We do not support importing {featureLabel} from this source right now."
   },
   "instances": {
