--- a/packages/hoppscotch-common/locales/pt-br.json
+++ b/packages/hoppscotch-common/locales/pt-br.json
@@ -552,7 +552,7 @@
     "import_summary_requests_title": "Requisições",
     "import_summary_responses_title": "Respostas",
     "import_summary_pre_request_scripts_title": "Scripts de Pré-Requisição",
-    "import_summary_test_scripts_title": "Scripts de teste",
+    "import_summary_post_request_scripts_title": "Scripts pós-requisição",
     "import_summary_not_supported_by_hoppscotch_import": "No momento, não suportamos a importação de {featureLabel} deste tipo de fonte."
   },
   "inspections": {
