chore: add initial current val in selector

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -407,12 +407,14 @@
     "added": "Environment addition",
     "create_new": "Create new environment",
     "created": "Environment created",
+    "current_value": "Current value",
     "deleted": "Environment deletion",
     "duplicated": "Environment duplicated",
     "edit": "Edit Environment",
     "empty_variables": "No variables",
     "global": "Global",
     "global_variables": "Global variables",
+    "initial_value": "Initial value",
     "import_or_create": "Import or create a environment",
     "invalid_name": "Please provide a name for the environment",
     "list": "Environment variables",
