--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -414,8 +414,8 @@
     "empty_variables": "No variables",
     "global": "Global",
     "global_variables": "Global variables",
-    "initial_value": "Initial value",
     "import_or_create": "Import or create a environment",
+    "initial_value": "Initial value",
     "invalid_name": "Please provide a name for the environment",
     "list": "Environment variables",
     "my_environments": "Personal Environments",
@@ -426,6 +426,10 @@
     "no_environment": "No environment",
     "no_environment_description": "No environments were selected. Choose what to do with the following variables.",
     "quick_peek": "Environment Quick Peek",
+    "replace_all_current_with_initial": "Replace all current with initial",
+    "replace_all_initial_with_current": "Replace all initial with current",
+    "replace_current_with_initial": "Replace with initial",
+    "replace_initial_with_current": "Replace with current",
     "replace_with_variable": "Replace with variable",
     "scope": "Scope",
     "secrets": "Secrets",
