feat(desktop): tab shortcuts discoverability
This adds tab navigation shortcuts to the shortcuts help dialog for
desktop users and conditionally shows them only in desktop mode.

The shortcuts help now includes a "Tabs" section with all available tab
management shortcuts, but only displays them when running in desktop
kernel mode to avoid confusing web users with non-functional shortcuts.

Closes FE-917

The desktop app already had functional tab navigation shortcuts, but
they weren't documented in the app's shortcuts help dialog (accessible
via `?` or `Cmd/Ctrl+/`). This made the shortcuts less discoverable for
users who wanted to learn about available keyboard controls.

What's changed:

- Added conditional shortcut loading in `shortcuts.ts` based on kernel mode detection
- Added "Tabs" section translations to `en.json` with all tab navigation shortcuts
- Implemented desktop-only shortcut filtering so web users only see applicable shortcuts

The shortcuts helper now uses `getKernelMode()` to determine whether to
include desktop-specific shortcuts in the help dialog.

The call to `getKernelMode()` is quite cheap so there won't be any
issues if the call was made during every re-render.

Shortcuts documented:

- **Ctrl/Cmd+T**: New Tab
- **Ctrl/Cmd+W**: Close Tab
- **Ctrl/Cmd+Shift+T**: Reopen Closed Tab
- **Ctrl/Cmd+Alt+Right**: Next Tab
- **Ctrl/Cmd+Alt+Left**: Previous Tab
- **Ctrl/Cmd+Alt+9**: Switch to First Tab
- **Ctrl/Cmd+Alt+0**: Switch to Last Tab

Implementation details:

The solution splits shortcuts into `baseShortcuts` (available on all
platforms) and `desktopShortcuts` (desktop-only), then conditionally
combines them based on the current kernel mode.

Notes to reviewers:

This change only affects the shortcuts help dialog display and doesn't
modify any functional behavior. All existing shortcuts continue to work
exactly as before.

Testing should verify that Desktop app shows the new "Tabs" section in
shortcuts help and Web app doesn't.

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -1114,6 +1114,16 @@
       "download": "Download response as file",
       "title": "Response"
     },
+    "tabs": {
+      "title": "Tabs",
+      "new_tab": "New Tab",
+      "close_tab": "Close Tab",
+      "reopen_tab": "Reopen Closed Tab",
+      "next_tab": "Next Tab",
+      "previous_tab": "Previous Tab",
+      "first_tab": "Switch to First Tab",
+      "last_tab": "Switch to Last Tab"
+    },
     "theme": {
       "black": "Switch theme to Black Mode",
       "dark": "Switch theme to Dark Mode",
