feat: add i18n for domain and workstation labels

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -281,6 +281,10 @@
       "headers": "JWT Headers",
       "private_key": "Private Key",
       "placeholder_headers": "JWT Headers"
+    },
+    "ntlm": {
+      "domain": "Domain",
+      "workstation": "Workstation"
     }
   },
   "collection": {
