feat: add i18n support for jwt and oauth2

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -291,6 +291,7 @@
     },
     "jwt": {
       "params_name": "Params Name",
+      "param_name": "Parameter Name",
       "header_prefix": "Header Prefix",
       "placeholder_request_header": "Request header prefix",
       "placeholder_request_param": "Request params name",
