chore: clean up

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -302,7 +302,8 @@
     },
     "ntlm": {
       "domain": "Domain",
-      "workstation": "Workstation"
+      "workstation": "Workstation",
+      "disable_retrying_request": "Disable Retrying Request"
     },
     "asap": {
       "issuer": "Issuer",
