chore: clean up

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -240,7 +240,8 @@
       "label_client_credentials": "Client Credentials",
       "label_send_as": "Client Authentication",
       "label_send_in_body": "Send Credentials in Body",
-      "label_send_as_basic_auth": "Send Credentials as Basic Auth"
+      "label_send_as_basic_auth": "Send Credentials as Basic Auth",
+      "enter_value": "Enter value"
     },
     "pass_key_by": "Pass by",
     "pass_by_query_params_label": "Query Parameters",
