chore: add helper text and cleanup

--- a/packages/hoppscotch-sh-admin/locales/en.json
+++ b/packages/hoppscotch-sh-admin/locales/en.json
@@ -47,9 +47,9 @@
         "title": "Token",
         "jwt_secret": " JWT Secret",
         "token_salt_complexity": "Token Salt Complexity",
-        "magic_link_token_validity": "Magic Link Token Validity",
-        "refresh_token_validity": "Refresh Token Validity",
-        "access_token_validity": "Access Token Validity",
+        "magic_link_token_validity": "Magic Link Token Validity (in hours)",
+        "refresh_token_validity": "Refresh Token Validity (in milliseconds)",
+        "access_token_validity": "Access Token Validity (in milliseconds)",
         "session_secret": "Session Secret",
         "update_failure": "Failed to update token configurations!!"
       },
@@ -99,7 +99,7 @@
     "rate_limit": {
       "description": "Configure rate limiting for your Hoppscotch instance",
       "rate_limit_max": "Maximum Requests",
-      "rate_limit_ttl": "Time to Leave",
+      "rate_limit_ttl": "Time to Leave (in seconds)",
       "title": "Rate Limit Configurations",
       "update_failure": "Failed to update rate limit configurations!!",
       "input_validation_error": "Please enter valid values for rate limit configurations"
